--- a/src/main/resources/templates/objects/primary-wizard.html
+++ b/src/main/resources/templates/objects/primary-wizard.html
@@ -1,25 +1,12 @@
-<!DOCTYPE html>
-<html lang="ru" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      th:replace="~{layout :: layout(~{::title}, 'objects', ~{::content}, ~{::extraHead}, ~{::extraScripts})}">
 <head>
-    <meta charset="UTF-8">
     <title>Первичные данные объекта</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <th:block th:fragment="extraHead"></th:block>
 </head>
 <body>
-<header class="topbar">
-    <h1>Object Manager</h1>
-    <nav>
-        <a href="/objects" class="active">Объекты</a>
-        <a href="/customers">Заказчики</a>
-        <a href="/admin" sec:authorize="hasRole('ADMIN')">Администрирование</a>
-        <form method="post" action="/logout">
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-            <button type="submit" class="link-button">Выход</button>
-        </form>
-    </nav>
-</header>
-<main class="content">
-    <section class="card">
+<th:block th:fragment="content">
+<section class="card">
         <div class="card-header">
             <h2 th:text="${object.name}">Объект</h2>
             <a class="button secondary" th:href="@{'/objects/' + ${object.id}}">Назад к объекту</a>
@@ -871,10 +858,8 @@
             <a class="button secondary" th:href="@{'/objects/' + ${object.id}}">Отмена</a>
         </div>
     </form>
-</main>
-<footer class="footer">
-    <p>Object Manager &copy; 2025</p>
-</footer>
+</th:block>
+<th:block th:fragment="extraScripts">
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         const deviceContainer = document.getElementById('device-groups');
@@ -3593,5 +3578,6 @@
         showStep(initialStep);
     });
 </script>
+</th:block>
 </body>
 </html>
