--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -137,6 +137,8 @@ input[type="text"],
 input[type="password"],
 input[type="number"],
 input[type="file"],
+input[type="date"],
+select,
 textarea {
     padding: 0.75rem;
     border: 1px solid #d1d5db;
